<resources>
    <string name="app_name">Books Lover</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_book_details">Giới thiệu sách</string>

    <string name="action_settings">Cài đặt</string>
    <string name="action_search">Tìm kiếm</string>

    <string name="text_unkown">Không biết</string>
    <string name="title_activity_register">Đăng kí</string>
    <string name="search">Tìm kiếm</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_name">Tên</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="prompt_rePassword">Nhập lại mật khẩu</string>
    <string name="prompt_age">Tuổi</string>
    <string name="prompt_website">Website</string>
    <string name="prompt_no_comment">Chưa có bình luận nào cho sách này</string>
    <string name="action_comment">Viết bình luận...</string>
    <string name="action_comment_btn">Bình luận</string>
    <string name="action_sign_up">Đăng kí</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_edit">Lưu</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_update">Chỉnh sửa</string>
    <string name="action_delete">Xóa</string>
    <string name="action_link_sign_in">Đã có tài khoản? Đăng nhập ngay.</string>
    <string name="action_link_sign_up">Chưa có tài khoản? Đăng kí ngay.</string>
    <!-- String related to add book-->
    <string name="prompt_title">Tên sách</string>
    <string name="prompt_author">Tác giả</string>
    <string name="prompt_year">Năm xuất bản</string>
    <string name="prompt_genre">Thể loại</string>
    <string name="prompt_intro">Giới thiệu / Đánh giá</string>
    <string name="action_add">Thêm mới</string>
    <string name="action_fav">Thích</string>
    <string name="action_unfav">Hủy thích</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="search_hint">Tên sách, tác giả, thể loại ...</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">giây</string>
    <string name="date_util_unit_seconds">vài giây</string>
    <string name="date_util_unit_minute">phút</string>
    <string name="date_util_unit_minutes">vài phút</string>
    <string name="date_util_unit_hour">tiếng</string>
    <string name="date_util_unit_hours">vài tiếng</string>
    <string name="date_util_unit_day">ngày</string>
    <string name="date_util_unit_days">vài ngày</string>
    <string name="date_util_unit_month">tháng</string>
    <string name="date_util_unit_months">vài tháng</string>
    <string name="date_util_unit_year">năm</string>
    <string name="date_util_unit_years">vài năm</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">về</string>
    <string name="date_util_prefix_over">hơn</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">trước</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_view_locations">Địa điểm đăng nhập</string>
</resources>
